2010-09-02  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated the ArkInventory rule and tooltip to work in QA is compatible instead of if its enabled in ItemAuditor.

2010-09-01  Asa Ayers  <Asa.Ayers@Gmail.com>

- Made some changes to begin migrating some QA functionality to QAManager (http://www.wowace.com/addons/qa-manager/)
- Ticket 35 - I found a better solution to prevent bag scanning from interfering with mailing, so both can be done at the same time now.

2010-08-30  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated Total Cost in /ia crafting to include the AH cut based on the price column. This will also reduce the profit column to consider the additional cost.
- Added an absolute Auction Threshold option. This will allow you to set your threshold at 10g (or whatever you choose) over your cost for all items.

2010-08-27  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added an option to enable the COD warning under /ia options > Messages > COD Warning. This is on by default.

2010-08-24  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 20 - Added a Skip Singles option to the Crafting Rules.
- Ticket 20 - Added a Bonus Queue to the Crafting Rules

2010-08-23  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 32 - Based on the patch from lrdx, I have chaned ItemAuditor to depend on DataStore directly instead of going through Altoholic.

2010-08-20  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 31 - Fixed an error in the 'You just made a profit of ...' message

2010-08-19  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 30 (related to #23) - ItemAuditor is back to counting items in the mailbox, but will subtract items purchased from the AH or COD mail from its item counts.
- Added a menu to allow the user to see what is to be crafted, only what you hae mats for, or view everything so you can see why something isn't to be crafted.
- Added a new Crafting Rules module to allow the user to set up custom rules based on item names.